# q2-dbotu

./: LICENSE  README.md  pyproject.toml  setup.py
dbotu_q2/: __init__.py  _call_otus.py  citations.bib  plugin_setup.py
environment-files/: q2-dbotu-qiime2-amplicon-2025.7.yml  q2-dbotu-qiime2-tiny-2025.7.yml  q2-dbotu-qiime2-tiny-dev.yml  q2-dbotu-qiime2-tiny-release.yml  q2-dbout-qiime2-amplicon-2025.7.yml
pyinstrument/: meta.yaml
q2_dbotu/: __init__.py  _call_otus.py  _methods.py  _version.py  plugin_setup.py
q2_dbotu/tests/: test_methods.py
recipe/: meta.yaml
test_data/: counts.biom  counts.qza  counts.transpose.qza  counts.transpose.txt  seq.qza
test_data/output/: otu.transpose.txt
