[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "q2_dbotu"
version = "2019.1"
description = "Distribution-based clustering"
authors = [
    { name = "Claire Duvallet", email = "cduvallet@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.6"
urls = { Homepage = "https://github.com/cduvallet/q2-dbotu" }

dependencies = [
    "dbotu",
    "pandas",
    "scikit-bio"
]

[project.entry-points."qiime2.plugins"]
q2_dbotu = "q2_dbotu.plugin_setup:plugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["q2_dbotu"]

[tool.setuptools.package-data]
"q2_dbotu" = ["citations.bib"]

