[project]
name = "q2-dbotu"
authors = [
    { name = "Claire Duvallet", email = "cduvallet@gmail.com"}
]
description = "Distribution-based clustering"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
dynamic = ["version"]

dependencies = [
    "dbotu",
    "pandas",
    "scikit-bio"
]

[project.urls]
Homepage = "https://github.com/cduvallet/q2-dbotu"

[project.entry-points.'qiime2.plugins']
"q2-dbotu" = "q2_dbotu.plugin_setup:plugin"

[build-system]
requires = [
    "setuptools",
    "versioningit",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "q2_dbotu._version.__version__"}

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["q2_dbotu*"]

[tool.setuptools.package-data]
q2_dbotu = ["**/*"]
